--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<meta charset="UTF-8" />
-	<head></head>
-	<body></body>
+	<head>
+		<link href="src/css/style.css" rel="stylesheet" />
+	</head>
+	<body>
+		<h1>こんにちは</h1>
+		<script src="src/js/main.js"></script>
+	</body>
 </html>
