--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 	<meta charset="UTF-8" />
 	<head>
+		<title>マインスイーパー</title>
 		<link href="src/css/style.css" rel="stylesheet" />
 	</head>
 	<body>
-		<h1>こんにちは</h1>
+		<div id="app"></div>
 		<script src="src/js/main.js"></script>
 	</body>
 </html>
