--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 		<link href="src/css/style.css" rel="stylesheet" />
 	</head>
 	<body>
-		<div id="app"></div>
-		<script src="src/js/main.js"></script>
+		<div id="app">
+			<div id="timeCnt">⏱</div>
+			<div id="bombCnt">🚩</div>
+			<div id="cells"></div>
+		</div>
+		<script type="module" src="src/js/main.js"></script>
 	</body>
 </html>
