--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<meta charset="UTF-8" />
-	<head>
-		<title>マインスイーパー</title>
-		<link href="src/css/style.css" rel="stylesheet" />
-	</head>
-	<body>
-		<div id="app">
-			<div id="timeCnt">⏱</div>
-			<div id="bombCnt">🚩</div>
-			<div id="cells"></div>
-		</div>
-		<script type="module" src="src/js/main.js"></script>
-	</body>
+    <meta charset="UTF-8" />
+    <head>
+        <title>マインスイーパー</title>
+        <link href="src/css/style.css" rel="stylesheet" />
+    </head>
+    <body>
+        <div id="app">
+            <div id="timeCnt">⏱</div>
+            <div id="bombCnt">🚩</div>
+            <div id="main"></div>
+        </div>
+        <script type="module" src="src/js/main.js"></script>
+    </body>
 </html>
