--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <html>
     <meta charset="UTF-8" />
     <head>
-        <title>マインスイーパー</title>
+        <title>Minesweeper</title>
         <link href="src/css/style.css" rel="stylesheet" />
     </head>
-    <body>
+    <body oncontextmenu="return false;">
         <div id="app">
-            <div id="timeCnt">⏱</div>
-            <div id="bombCnt">🚩</div>
-            <div id="main"></div>
+            <div class="conteiner">
+                <div class="flex-box">
+                    <div id="time">⏱000</div>
+                </div>
+                <div class="flex-box">
+                    <div id="reset-button">☺</div>
+                </div>
+                <div class="flex-box">
+                    <div id="bomb">💣000</div>
+                </div>
+            </div>
+            <div id="game"></div>
+        </div>
         </div>
         <script type="module" src="src/js/main.js"></script>
     </body>
