--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <title>Minesweeper</title>
         <link href="src/css/style.css" rel="stylesheet" />
@@ -12,7 +13,7 @@
                     <div id="time">⏱000</div>
                 </div>
                 <div class="flex-box">
-                    <div id="reset-button">☺</div>
+                    <div id="reset-button"></div>
                 </div>
                 <div class="flex-box">
                     <div id="bomb">💣000</div>
