--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
-        <title>Minesweeper</title>
+        <title>Minesweeper!!</title>
         <link href="src/css/style.css" rel="stylesheet" />
     </head>
     <body oncontextmenu="return false;">
